[project]
name = "ComfyUI_FDGuidance"
description = 'An implementation of Frequency-Decoupled Guidance (FDG) in pure Pytorch.'
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/silveroxides/ComfyUI_FDGuidance"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI_FDGuidance"
Icon = ""
